[tool.poetry]
name = "docker-home"
version = "0.1.0"
description = ""
authors = ["AndriyBatig1992 <139012178+AndriyBatig1992@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
prompt-toolkit = "^3.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
